# tax-pro-holy-grail

./: .gitignore  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/java/com/taxproholygrail/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
public/: manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: CTASection.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  PaymentModal.tsx  PricingSection.tsx  TaxCalculator.tsx
src/store/: useStore.ts
src/types/: react-dom-client.d.ts
