[package]
name = "tax-pro-holy-grail"
version = "1.0.0"
description = "Tax Pro Holy Grail - Enterprise-grade tax filing with AI assistance"
authors = ["Tax Pro Holy Grail Team"]
license = "MIT"
repository = "https://github.com/taxproholygrail/app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.4", features = [] }
tauri-plugin-log = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-clipboard = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
